--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -34,6 +34,6 @@
                   = @product.nom
                 .row{ :style => "text-align:center;" }
                   = image_tag @product.product_image
-                .row{ :style => "text-align:center;" }
+                .row.link-home{ :style => "text-align:center;" }
                   = link_to 'Rent', produit_rent_path(@product)
                   = link_to 'Show', @product
