--- a/app/views/types/list_produits.html.haml
+++ b/app/views/types/list_produits.html.haml
@@ -11,7 +11,7 @@
       = image_tag produit.product_image, :class =>'product_img'
     .col-sm-2{ :style => "padding-top:3%;" }
       = link_to 'Show', produit, class:"btn btn-info list-group-a"
-    -if(produit.disponibilite == true)
+    -if(produit.disponibilite > 0)
       .col-sm-2.list-rent
         -if (current_user)
           = link_to 'Louer', new_user_produit_location_url(user_id: current_user, produit_id: produit.id)
