inte list product

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,6 +9,7 @@
     padding: 4% 10%;
     height: 25%;
     overflow:hidden;
+    margin-bottom:1% !important;
 }
 
 .list-group-item:hover{
@@ -44,9 +45,4 @@
 
 .location-destroy:hover{
     background-color:#252121 !important;
-}
-
-.list-product-img{
-    width:65%;
-    position:absolute;
 }
