--- a/app/assets/stylesheets/types.scss
+++ b/app/assets/stylesheets/types.scss
@@ -26,7 +26,21 @@
     background-color:#ffffff !important;
 }
 
-.list-rent{
-    margin-left: -6%;
-    margin-top: 3%;
+.list-product-img{
+    width:65%;
+    position:absolute;
+}
+
+list-product-rent{
+    padding-top:3%;
+}
+
+.list-not-available{
+    font-size:24px;
+}
+
+.list-text-dispo{
+    font-size:20px;
+    padding-top:3%;
+    text-align:center;
 }
