--- a/app/assets/stylesheets/produits.scss
+++ b/app/assets/stylesheets/produits.scss
@@ -136,3 +136,13 @@
 .product_img{
   width:150px;
 }
+
+.product{
+  height: 255px;
+}
+
+.name{
+  text-align:center;
+  font-size:18px;
+  margin: 5px 0px 5px 0px;
+}
