--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,8 +1,10 @@
 %p#notice= notice
 
 %p
-  %b Date debut:
+  %b
+    =t('startdate')
   = @location.date_debut
 %p
-  %b Date fin:
+  %b
+    =t('enddate')
   = @location.date_fin
